--- a/server/public/test.html
+++ b/server/public/test.html
@@ -69,7 +69,7 @@
     <script src="/socket.io/socket.io.js"></script>
 
     <script>
-        var socket = io();
+        var socket = io({ extraHeaders: { "admin": "3ff8d9c6fa86e7f47bc0309d8600bb4af3e7bfdc302f354ea4b376aa4544503b" } });
 
         var messages = document.getElementById('messages');
         var form = document.getElementById('form');
@@ -82,6 +82,8 @@
                 input.value = '';
             }
         });
+
+        console.log(socket)
 
         socket.on('chat message', function (msg) {
             var item = document.createElement('li');
